@@ -2,8 +2,10 @@ Changes in version 0.2
 ======================
 
 STILL UNDER DEVELOPMENT; NOT RELEASED YET!
+REMEMBER TO ADJUST -version-info BEFORE THE RELEASE.
 
-* No changes recorded.
+* New methods added to the state class: get_metafield, get_metatable,
+  insert, push_value, raw_get and raw_set.
 
 
 Changes in version 0.1
